# cc-harness

./: .env.example  .gitignore  CLAUDE.md  README.md  indirect-injection-design.md  main.py  mcp.json  policy.yaml.example  pyproject.toml  requirements.txt  run_verify.py
.github/workflows/: redteam-allow.yml  redteam-full.yml  redteam.yml
.superpowers/sdd/: task-8-report.md
cc_harness/: agent.py  audit.py  config.py  context.py  executor.py  l2.py  l5.py  llm.py  mcp_client.py  policy.py  prompts.py  render.py  repl.py  sandbox.py  sandbox_server.py  schema.py  tokens.py  tools.py
cc_harness/cli/: __init__.py  _shared.py  init.py  resume.py  todo.py
eval/: README.md  run.py
sandboxes/: Dockerfile
tests/: _test_b_e2e.py  _test_c_e2e.py  _test_d1_e2e.py  _test_drift_e2e.py  _test_e1_e2e.py  _test_e3_e2e.py  _test_evaluator_integration.py  _test_maintenance_e2e.py  _test_no_fabrication.py  _test_project_e2e.py  _test_real_thought.py  _test_reflection_e2e.py  _test_sandbox_integration.py  _test_thought_visibility.py  conftest.py  fake_mcp_server.py  test_agent.py  test_agent_extra_specs.py  test_agent_gate_prompt.py  test_agent_hints.py  test_attacks_exec.py  test_attacks_yaml.py  test_audit.py  test_b_integration.py  test_c_integration.py  test_cc_harness_wrapper.py  test_cli_init.py  test_cli_resume.py  test_cli_todo.py  test_completion_gate.py  test_config.py  test_context.py  test_curate_attacks.py  test_d1_integration.py  test_d1_prompt.py  test_d1_subagent.py  test_dedup_logic.py  test_defense_matrix.py  test_dependency_b.py  test_dependency_c.py  (+70 more)
(+203 files in other folders)
