[project]
name = "cc-harness"
version = "0.1.0"
description = "Terminal coding agent with MCP tools"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40",
  "mcp[cli]>=1.0",
  "rich>=13.7",
  "tiktoken>=0.7",
  "python-dotenv>=1.0",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.6"]
eval = [
  "huggingface-hub>=0.24",
  "datasets>=2.20",
  "pandas>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cc_harness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
